# snakemake-scheduler-plugin-firstfit

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-please.yml
docs/: further.md  intro.md
src/snakemake_scheduler_plugin_firstfit/: __init__.py
tests/: test_plugin.py
tests/benchmark/: Snakefile
